--- a/horarios.html
+++ b/horarios.html
@@ -11,8 +11,7 @@ dance_tango_I: Tango iniciante
 dance_tango_II: Tango intermediário
 dance_samba_I: Samba iniciante
 dance_samba_II: Samba intermediário
-dance_salsa_I: Salsa iniciante
-dance_chachacha_I: Cha cha cha iniciante
+dance_salsa_I: Salsa iniciante <br> Cha cha cha iniciante
 musical_teory_I: Teoria musical I
 musical_teory_II: Teoria musical II
 musical_teory_III: Anatomia aplicada a dança de salão
@@ -65,7 +64,6 @@ musical_teory_III: Anatomia aplicada a dança de salão
                         <li><a data-filter=".dance_zouk_I" href="#" class="">{{ page.dance_zouk_I }}</a></li>
                         <li><a data-filter=".dance_zouk_II" href="#" class="">{{ page.dance_zouk_II }}</a></li>
                         <li><a data-filter=".dance_salsa_I" href="#" class="">{{ page.dance_salsa_I }}</a></li>
-                        <li><a data-filter=".dance_chachacha_I" href="#" class="">{{ page.dance_chachacha_I }}</a></li>
                         <li><a data-filter=".dance_forro_I" href="#" class="">{{ page.dance_forro_I }}</a></li>
                         <li><a data-filter=".dance_forro_II" href="#" class="">{{ page.dance_forro_II }}</a></li>
 
@@ -398,43 +396,7 @@ musical_teory_III: Anatomia aplicada a dança de salão
                                     </td>
                                 </tr>
 
-                                <tr>
-                                    <th>20:00 - 21:00</th>
-                                    <td>
-                                        <a href="./class-single.html" class="dance_chachacha_I">
-                                            {{ page.dance_chachacha_I }}
-                                        </a>
-                                    </td>
-
-                                    <td>
-                                        <a href="./class-single.html" class="dance_chachacha_I">
-                                            {{ page.dance_chachacha_I }}
-                                        </a>
-                                    </td>
-
-                                    <td>
-                                        <a href="./class-single.html" class="dance_chachacha_I">
-                                            {{ page.dance_chachacha_I }}
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="dance_chachacha_I">
-                                            {{ page.dance_chachacha_I }}
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="dance_chachacha_I">
-                                            {{ page.dance_chachacha_I }}
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="dance_chachacha_I">
-                                            {{ page.dance_chachacha_I }}
-                                        </a>
-                                    </td>
-                                    <td>
-                                    </td>
-                                </tr>
+                                
 
 
                                 <tr>
