change formatura description

--- a/sobre.html
+++ b/sobre.html
@@ -93,7 +93,7 @@ layout: default
                         <div class="caption">
                             <h4>Formatura</h4>
                             <p class="color">Vibre com sua conquista</p>
-                            <p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.</p>
+                            <p>Após provas sem fim, noites em claro e reuniões de trabalhos em grupo para a universidade, é dada a hora de crescer e conhecer mais, através de mais estudo ou de simples ensinamentos que a vida nos proporciona. Assim sendo, a hora para se comemorar o fechamento de mais essa etapa em suas vidas se apresenta. Venha comemorar conosco de uma maneira incrível e torne esta etapa ainda mais encantadora!</p>
                         </div>
 
                     </div>
@@ -129,4 +129,3 @@ layout: default
             </div>
         </div>
     </section>
--->
