--- a/horarios.html
+++ b/horarios.html
@@ -11,7 +11,7 @@ dance_tango_I: Tango iniciante
 dance_tango_II: Tango intermediário
 dance_samba_I: Samba iniciante
 dance_samba_II: Samba intermediário
-dance_salsa_I: Salsa iniciante <br> Cha cha cha iniciante
+dance_salsa_I: Salsa iniciante &amp; Cha cha cha
 musical_teory_I: Teoria musical I
 musical_teory_II: Teoria musical II
 musical_teory_III: Anatomia aplicada a dança de salão
