--- a/contato.html
+++ b/contato.html
@@ -36,7 +36,7 @@ layout: default
                     Telefone:<a href="tel:{{ site.phone_number }}"><strong> {{ site.phone_number }}</strong></a>
                 </p>
                 <p>
-                    Email:<a href="mailto:{{ site.email }}">{{ site.email }}</a>
+                    Email:<a href="mailto:{{ site.email }}"><strong> {{ site.email }}</strong></a>
                 </p>
                 <p>
                     <strong>Endereço:</strong> {{ site.address }}
