--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ pre_footer_text: Venha nos visitar para ter a sua melhor experiência de dança
 pre_footer_link: contato
 ---
 <span id="highlight_page_id" class="hidden">0</span>
+<div id="email-condition" class="margin_top_sucess alert alert-success hidden"><strong>Enviado!</strong> Seu e-mail foi enviado com sucesso.</div>
 <section id="mainslider">
     <!-- all slides img have 2,4:1 porportional ratio -->
     <div class="flexslider">
