fix box events in sobre

--- a/sobre.html
+++ b/sobre.html
@@ -79,7 +79,7 @@ layout: default
                         <div class="caption">
                             <h4>Casamento</h4>
                             <p class="color">Um momento inesquecível</p>
-                            <p>
+                            <p class="max_text_events">
                               As coreografias são montadas a partir de música escolhida pelo casal e que, normalmente, tem relação com sua história de amor. Depois de conhecer essa história e as preferências dos noivos, os professores da Compassos desenvolvem a coreografia. De acordo com o desejo do casal, a dança pode emocionar, divertir ou fazer os convidados dançarem.
                               Os noivos não precisam ter qualquer conhecimento prévio de dança para participar de uma coreografia.
                             </p>
@@ -93,7 +93,9 @@ layout: default
                         <div class="caption">
                             <h4>Formatura</h4>
                             <p class="color">Vibre com sua conquista</p>
-                            <p>Após provas sem fim, noites em claro e reuniões de trabalhos em grupo para a universidade, é dada a hora de crescer e conhecer mais, através de mais estudo ou de simples ensinamentos que a vida nos proporciona. Assim sendo, a hora para se comemorar o fechamento de mais essa etapa em suas vidas se apresenta. Venha comemorar conosco de uma maneira incrível e torne esta etapa ainda mais encantadora!</p>
+                            <p class="max_text_events">
+                              Após provas sem fim, noites em claro e reuniões de trabalhos em grupo para a universidade, é dada a hora de crescer e conhecer mais, através de mais estudo ou de simples ensinamentos que a vida nos proporciona. Assim sendo, a hora para se comemorar o fechamento de mais essa etapa em suas vidas se apresenta. Venha comemorar conosco de uma maneira incrível e torne esta etapa ainda mais encantadora!
+                            </p>
                         </div>
 
                     </div>
@@ -106,7 +108,7 @@ layout: default
                         <div class="caption">
                             <h4>Festas de 15 anos</h4>
                             <p class="color">Encante e se encante</p>
-                            <p>
+                            <p class="max_text_events">
                               Em um dia inesquecível, queremos fazer de sua festa um momento singular. Nada além em uma festa de debutante, o que há de mais maravilhoso do que a dança da debutante? Para isto oferessemos profissionais que podem transformar esse momento fantástico.
                             </p>
                         </div>
@@ -119,7 +121,7 @@ layout: default
                         <div class="caption">
                             <h4>Eventos especiais</h4>
                             <p class="color">Algo memorável</p>
-                            <p>
+                            <p class="max_text_events">
                               Emoção e profissionalismo são características intrinsecas da Compassos. Com satisfação nós tornaremos seu evento em um enorme espetáculo, cheio de diversão, prazer e afeto. Um momento sublime para você e seus convidados.
                             </p>
                         </div>
