--- a/horarios.html
+++ b/horarios.html
@@ -3,13 +3,13 @@ layout: default
 street_dance: Street Dance
 danca_salao: Dança de Salão Iniciado
 zouk: Zouk Iniciado
-salsa_bachata: Salsa &amp; Bachata
+salsa_bachata: Salsa &amp; Bachata Iniciante
 danca_salao_int: Dança de Salão Iniciante
 zouk_inter: Zouk Intermediário
 forro_samba: Forro &amp; Samba Iniciante
 samba_inter: Samba Intermediário
 ioga: Ioga
-salsa_linha: Salsa em linha
+salsa_linha: Salsa em linha Iniciante
 forro_int: Forró Iniciante
 forro_sert_inter: Forro &amp; Sertanejo Intermediário
 tango_inter: Tango Intermediário
@@ -17,6 +17,8 @@ zouk_int: Zouk Iniciante
 samba_bole: Samba &amp; Bolero Intermediário
 bachata: Bachata Iniciado
 samba_zouk: Zouk &amp; Samba Iniciante
+zumba: Zumba
+ballet_adulto: Ballet Adulto
 ---
 
 
@@ -692,19 +694,19 @@ samba_zouk: Zouk &amp; Samba Iniciante
                     <li><a data-filter=".danca_salao" href="#" class="">{{ page.danca_salao }}</a></li>
                     <li><a data-filter=".danca_salao_int" href="#" class="">{{ page.danca_salao_int }}</a></li>
                     <li><a data-filter=".zouk" href="#" class="">{{ page.zouk }}</a></li>
-                    <li><a data-filter=".zouk_int" href="#" class="">{{ page.zouk_int }}</a></li>
                     <li><a data-filter=".zouk_inter" href="#" class="">{{ page.zouk_inter }}</a></li>
                     <li><a data-filter=".samba_zouk" href="#" class="">{{ page.samba_zouk }}</a></li>
                     <li><a data-filter=".samba_inter" href="#" class="">{{ page.samba_inter }}</a></li>
                     <li><a data-filter=".samba_bole" href="#" class="">{{ page.samba_bole }}</a></li>
                     <li><a data-filter=".forro_samba" href="#" class="">{{ page.forro_samba }}</a></li>
-                    <li><a data-filter=".forro_int" href="#" class="">{{ page.forro_int }}</a></li>
                     <li><a data-filter=".forro_sert_inter" href="#" class="">{{ page.forro_sert_inter }}</a></li>
                     <li><a data-filter=".tango_inter" href="#" class="">{{ page.tango_inter }}</a></li>
                     <li><a data-filter=".salsa_linha" href="#" class="">{{ page.salsa_linha }}</a></li>
                     <li><a data-filter=".salsa_bachata" href="#" class="">{{ page.salsa_bachata }}</a></li>
                     <li><a data-filter=".bachata" href="#" class="">{{ page.bachata }}</a></li>
                     <li><a data-filter=".ioga" href="#" class="">{{ page.ioga }}</a></li>
+                    <li><a data-filter=".zumba" href="#" class="">{{ page.zumba }}</a></li>
+                    <li><a data-filter=".ballet-adulto" href="#" class="">{{ page.ballet_adulto }}</a></li>
                 </ul>
                 <div class="clearfix"></div>
             </div>
@@ -736,6 +738,16 @@ samba_zouk: Zouk &amp; Samba Iniciante
                             </tr>
 
                             <tr>
+                                <th>10h30</th>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td><a href="ballet-adulto" class="ballet_adulto">{{ page.ballet_adulto }}</a></td>
+
+                            </tr>
+
+                            <tr>
                                 <th>15h</th>
                                 <td></td>
                                 <td></td>
@@ -762,6 +774,16 @@ samba_zouk: Zouk &amp; Samba Iniciante
                                 <td><a href="#" class="ioga">{{ page.ioga }}</a></td>
                                 <td></td>
                                 <td><a href="#" class="ioga">{{ page.ioga }}</a></td>
+                                <td></td>
+
+                            </tr>
+
+                            <tr>
+                                <th>18h</th>
+                                <td></td>
+                                <td><a href="#" class="zumba">{{ page.zumba }}</a></td>
+                                <td></td>
+                                <td><a href="#" class="zumba">{{ page.zumba }}</a></td>
                                 <td></td>
 
                             </tr>
@@ -835,17 +857,6 @@ samba_zouk: Zouk &amp; Samba Iniciante
                                 <td><a href="tango" class="tango_inter">{{ page.tango_inter }}</a></td>
                                 <td><a href="dança-de-salão" class="danca_salao">{{ page.danca_salao }}</a></td>
                                 <td><a href="tango" class="tango_inter">{{ page.tango_inter }}</a></td>
-                                <td></td>
-
-                            </tr>
-
-
-                            <tr>
-                                <th>20h</th>
-                                <td></td>
-                                <td><a href="zouk" class="zouk_int">{{ page.zouk_int }}</a></td>
-                                <td></td>
-                                <td><a href="zouk" class="zouk_int">{{ page.zouk_int }}</a></td>
                                 <td></td>
 
                             </tr>
