update contact email address

--- a/contato.html
+++ b/contato.html
@@ -54,7 +54,7 @@ layout: default
                 <header class="section_header">
                     <h2>Formulário de contato</h2>
                 </header>
-                <form class="contact-form" method="POST" action="https://simple-form.com/me@kaiomagalhaes.com">
+                <form class="contact-form" method="POST" action="https://simple-form.com/studiocompassos@hotmail.com">
                     <p class="contact-form-name">
                         <input aria-required="true" type="text" name="name" class="form-control" placeholder="Nome" />
                     </p>
