fix email redirect

--- a/contato.html
+++ b/contato.html
@@ -70,7 +70,7 @@ layout: default
                     <p class="contact-form-submit vertical-margin-40">
 			                  <input type="submit" class="theme_button" value="Enviar" />
                     </p>
-                    <input type="hidden" name="redirectURL" value ="http://www.studiocompassos.com/?emailSucess=true"/>
+                    <input type="hidden" name="redirectURL" value ="https://studiocompassosgyn.com.br?emailSucess=true"/>
 		            </form>
                 <!--
                 <form class="contact-form" method="post" action="/">
